	 each bit of the snapshot structure into their own source files.
	 Improves encapsulation somewhat.
20040609 slt.[ch],spectrum.[ch],z80/{coretest.c,z80.pl,z80_ops.c}:
	 improve encapsulation of SLT data.
20040609 Makefile.am,machine.c,memory.c,snapshot.c,spectrum.[ch],
	 machines/{pentagon.c,scorpion.c,spec128.c,spec16.c,spec48.c,
	 spec_se.c,specplus2a.c,specplus3.c,tc2048.c,tc2068.c},
	 ui/gtk/debugger.c,ula.[ch],z80/{coretest.c,z80.pl,z80_macros.h,
	 z80_ops.c}: place ULA routines in their own source file.
20040610 settings.dat: make ZXATASP upload and write protect, and ZXCF
	 upload default to off.
20040610 settings-header.pl,settings.pl,ui/gtk/roms.c,widget/roms.c:
	 no need to put machine name in ROM titles any more as they're
	 now on their own menus.
20040610 ay.c: add 'return 0' to the end of ay_to_snapshot.
20040610 ui/gtk/roms.c: improve user interface a bit.
20040610 ui/gtk/gtkjoystick.c: improve user interface a bit.
20040611 settings.dat,ui/gtk/gtkjoystick.c: allow up to 10 buttons per
	 joystick, and improve user interface for changing these.
20040611 ui/gtk/{gtkjoystick.c,roms.c}: remove a couple of warnings.
20040615 snapshot.c: fall back to +2A if +3e not available.
20040615 ay.[ch],psg.c: remove duplicated literal constant for number
	 of AY registers.
20040616 configure.in,menu_data.c,perl/cpp-perl.pl,ui/gtk/Makefile.am,
	 widget/Makefile.am: use custom preprocessor to parse menu_data.c
	 as OS X 10.1(?)'s preprocessor requires proper C syntax.
20040616 debugger/{commandl.l,commandy.y,debugger_internals,h,expression.c}:
	 remove duplicated literal constants.
20040616 debugger/{breakpoint.c,commandl.l,commandy.y,debugger_internals.h}:
	 make setting breakpoints in non-RAM pages slightly more user
	 friendly.
20040617 ui/gtk/roms.c: add ellipses to the 'Select' buttons.
20040617 man/fuse.1: man page update. More updates welcome :-)
20040618 AUTHORS,ChangeLog,README,THANKS: doc updates working towards a
	 0.7.0 release.